openapiの整理
